@@ -713,6 +713,8 @@ literal|"name"
 block|,
 literal|"branch"
 block|,
+literal|"branchConstraint"
+block|,
 literal|"rev"
 block|,
 literal|"revConstraint"
@@ -3528,6 +3530,21 @@ argument_list|)
 argument_list|)
 decl_stmt|;
 name|String
+name|branchConstraint
+init|=
+name|ivy
+operator|.
+name|substitute
+argument_list|(
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+literal|"branchConstraint"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|String
 name|rev
 init|=
 name|ivy
@@ -3612,7 +3629,7 @@ name|org
 argument_list|,
 name|name
 argument_list|,
-name|branch
+name|branchConstraint
 argument_list|,
 name|revConstraint
 argument_list|,
