@@ -2252,6 +2252,31 @@ literal|"branch"
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|String
+name|branchConstraint
+init|=
+name|substitute
+argument_list|(
+name|settings
+argument_list|,
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+literal|"branchConstraint"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|branchConstraint
+operator|=
+name|branchConstraint
+operator|==
+literal|null
+condition|?
+name|branch
+else|:
+name|branchConstraint
+expr_stmt|;
 comment|// look for the branch used in resolved revisions
 if|if
 condition|(
@@ -2414,24 +2439,6 @@ name|extraAttributes
 argument_list|)
 decl_stmt|;
 name|ModuleRevisionId
-name|localConstraintMrid
-init|=
-name|ModuleRevisionId
-operator|.
-name|newInstance
-argument_list|(
-name|org
-argument_list|,
-name|module
-argument_list|,
-name|branch
-argument_list|,
-name|revisionConstraint
-argument_list|,
-name|extraAttributes
-argument_list|)
-decl_stmt|;
-name|ModuleRevisionId
 name|systemMrid
 init|=
 name|ns
@@ -2448,25 +2455,6 @@ operator|.
 name|transform
 argument_list|(
 name|localMrid
-argument_list|)
-decl_stmt|;
-name|ModuleRevisionId
-name|systemConstraintMrid
-init|=
-name|ns
-operator|==
-literal|null
-condition|?
-name|localConstraintMrid
-else|:
-name|ns
-operator|.
-name|getToSystemTransformer
-argument_list|()
-operator|.
-name|transform
-argument_list|(
-name|localConstraintMrid
 argument_list|)
 decl_stmt|;
 for|for
@@ -2536,6 +2524,33 @@ operator|+
 literal|"\""
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|attributes
+operator|.
+name|getIndex
+argument_list|(
+literal|"branchConstraint"
+argument_list|)
+operator|==
+operator|-
+literal|1
+operator|&&
+name|branchConstraint
+operator|!=
+literal|null
+condition|)
+block|{
+name|write
+argument_list|(
+literal|" branchConstraint=\""
+operator|+
+name|branchConstraint
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|attributes
@@ -2674,6 +2689,26 @@ name|systemMrid
 operator|.
 name|getBranch
 argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
+literal|"branchConstraint"
+operator|.
+name|equals
+argument_list|(
+name|attName
+argument_list|)
+condition|)
+block|{
+name|write
+argument_list|(
+literal|" branchConstraint=\""
+operator|+
+name|branchConstraint
 operator|+
 literal|"\""
 argument_list|)
