@@ -743,6 +743,48 @@ operator|+
 literal|"\""
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" branch=\""
+operator|+
+name|XMLHelper
+operator|.
+name|escape
+argument_list|(
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+argument_list|)
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+block|}
 name|out
 operator|.
 name|print
@@ -791,6 +833,48 @@ argument_list|()
 argument_list|)
 condition|)
 block|{
+if|if
+condition|(
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|getDynamicConstraintDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|print
+argument_list|(
+literal|" branchConstraint=\""
+operator|+
+name|XMLHelper
+operator|.
+name|escape
+argument_list|(
+name|dds
+index|[
+name|i
+index|]
+operator|.
+name|getDynamicConstraintDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+argument_list|)
+operator|+
+literal|"\""
+argument_list|)
+expr_stmt|;
+block|}
 name|out
 operator|.
 name|print
