@@ -18524,6 +18524,182 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveModeDynamicWithBranch1
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// bar1;5 -> foo1#branch1|;2|[0,4]
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/branches/ivysettings.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/branches/bar/bar1/trunk/5/ivy.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+operator|.
+name|setResolveMode
+argument_list|(
+name|ResolveOptions
+operator|.
+name|RESOLVEMODE_DYNAMIC
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+name|ivy
+argument_list|,
+literal|"foo#foo1#trunk;3"
+argument_list|,
+literal|"foo1"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testResolveModeDynamicWithBranch2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// bar1;5 -> foo1#trunk|branch1;3|[0,4]
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/branches/ivysettings.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/branches/bar/bar1/trunk/6/ivy.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+operator|.
+name|setResolveMode
+argument_list|(
+name|ResolveOptions
+operator|.
+name|RESOLVEMODE_DYNAMIC
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+name|ivy
+argument_list|,
+literal|"foo#foo1#branch1;4"
+argument_list|,
+literal|"foo1"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveModeDefaultOverrideSettings
 parameter_list|()
 throws|throws
