@@ -2150,6 +2150,19 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
+literal|"trunk"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
 literal|"1.1"
 argument_list|,
 name|dd
@@ -2158,6 +2171,19 @@ name|getDependencyRevisionId
 argument_list|()
 operator|.
 name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"branch1"
+argument_list|,
+name|dd
+operator|.
+name|getDynamicConstraintDependencyRevisionId
+argument_list|()
+operator|.
+name|getBranch
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2176,7 +2202,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"yourorg#yourmodule1;1+"
+literal|"yourorg#yourmodule1#branch1;1+"
 argument_list|,
 name|dd
 operator|.
